@@ -10,8 +10,8 @@
 
 AC_INIT(autogen.sh)
 
-VERSION="2.0.4"
-LT_VERSION="2:8:0"
+VERSION="2.0.5"
+LT_VERSION="2:9:0"
 
 AC_CONFIG_AUX_DIR(autoconf)
 AC_CANONICAL_SYSTEM
